# fastapi-12factor

./: Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
docs/: index.md  mkdocs.yml
docs/docs/: index.md
fastapi_12factor/: __init__.py  dataset.py  features.py  plots.py
fastapi_12factor/modeling/: predict.py  train.py
tests/: test_data.py
