[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapi_12factor"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Bijay" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["fastapi_12factor"]
include = ["pyproject.toml", "fastapi_12factor/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fastapi_12factor"]
force-sort-within-sections = true

